# ocaml-cisp

./: .gitignore  .ocamlformat  README.md  browser.lisp  dune  dune-project  gendoc.sh  output.ck  quicky.lisp
doc/: Jack.html  Process.html  Sndfile.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Jack.html  type_Process.html  type_Sndfile.html
examples/: .merlin  0 0.5 1 1.5 2 2.5 3 3.5 4 4.5 5 5.5 6 6.  SimpleSupercollider.scd  antcolony.ml  antcolony3d.ml  antscore.sco  antscore2.sco  antscore2__.sco  antscore2_v1.sco  antscore3 copy.sco  blackhole_router.pd  cisp.ml  cisp1.ml  cisp2.ml  cisp3.ml  cisp4.ml  cisp5.ml  cisp6.ml  cisp7.ml  cisp8.ml  cispOsc.ml  cispOsc2.ml  cispOsc3.ml  cispReader.ml  cispTest.ml  collatz.ml  connect.sh  connectJack.sh  connect_cisp.sh  current.txt  decoherence-test.ml  decoherence.ml  decoherence.sh  decoherence_kill.sh  decoherence_klangraum.sh  dune  filtertest.ml  fluct.ml  fluct1.json  fmfb.ml  (+65 more)
examples/ants/: ants_wfs.uscore  antscore.uscore  supercollider_intstrument.scd  test.uscore
examples/cisp_backup/: #readme.md#  .#readme.md  JoyFull.ml  cisp1-mess.ml  cisp_funky_walk-2.ml  cisp_funky_walk.ml  cisp_prince.ml  midiMachine.ml  readme.md
examples/cisp_backup/180425/: cisp1.ml  cisp3.ml
examples/cisp_backup/AfroCaml/: cisp2.ml  cisp3.ml
examples/cisp_backup/InfSeq/: cisp2.ml
examples/cisp_backup/TimedLines/: cisp2.ml  cisp8.ml
examples/cisp_backup/arpegAugust/: cisp1.ml
examples/cisp_backup/august23/: cisp1.ml  cisp4.ml
examples/cisp_backup/basic/: cisp1.ml  cisp2.ml
examples/cisp_backup/beforeDecoherence/: cisp1.ml  cisp2.ml  cisp3.ml  cisp4.ml  cisp5.ml
examples/cisp_backup/boerman/: cisp1.ml  cisp2.ml  cisp7.ml
examples/cisp_backup/brass/: cisp2.ml  cisp4.ml
examples/cisp_backup/burundi/: cisp1.ml  cisp4.ml
examples/cisp_backup/casper/: cisp3.ml  cisp8.ml
examples/cisp_backup/chords_arp_7_3_21/: cisp1.ml
examples/cisp_backup/cycle_2021/: cisp5.ml
examples/cisp_backup/decoherenceAfter/: cisp1.ml  cisp6.ml  cisp7.ml
examples/cisp_backup/delaySynth2/: cisp4.ml  cisp5.ml  cisp5.ml~
examples/cisp_backup/delaySynthBatch1/: cisp2.ml  cisp3.ml  cisp4.ml  cisp5.ml  cisp8.ml
examples/cisp_backup/delaySynthesis/: cisp2.ml  cisp3.ml
examples/cisp_backup/desert412/: cisp1.ml  cisp2.ml  cisp3.ml
examples/cisp_backup/drumPat3/: cisp1.ml  cisp2.ml
examples/cisp_backup/drumPattern/: cisp3.ml
examples/cisp_backup/drumPattern2/: cisp2.ml  cisp4.ml
examples/cisp_backup/drums/: cisp1.ml
examples/cisp_backup/dynamic_plug/: cisp1.ml  cisp3.ml
examples/cisp_backup/etoiles/: cisp1.ml
examples/cisp_backup/euclidMulti/: cisp1.ml  cisp2.ml  cisp4.ml  cisp6.ml  cisp7.ml  cisp8.ml
examples/cisp_backup/fish/: cisp1.ml
examples/cisp_backup/funky/: cisp1.ml  cisp2.ml
examples/cisp_backup/genome/: cisp1.ml  cisp2.ml
examples/cisp_backup/lastSax/: cisp2.ml  cisp3.ml  cisp4.ml  cisp8.ml
examples/cisp_backup/october11/: cisp3.ml  cisp4.ml
examples/cisp_backup/onetwothree/: cisp2.ml
examples/cisp_backup/osc/: cisp3.ml
examples/cisp_backup/oscOut/: cisp2.ml  cisp3.ml  cisp4.ml  cisp5.ml  cisp7.ml
examples/cisp_backup/pianotrance/: cisp3.ml  cisp4.ml
examples/cisp_backup/readerMonadLetSyntax/: cisp1.ml  cisp6.ml
examples/cisp_backup/scheduler/: cisp1.ml  cisp2.ml  cisp3.ml  cisp8.ml
examples/cisp_backup/spaceWalk/: cisp2.ml  cisp3.ml  cisp4.ml
examples/cisp_backup/synco2/: cisp1.ml  cisp2.ml  cisp3.ml  cisp5.ml  cisp6.ml
examples/cisp_backup/synco2_passagalla/: cisp1.ml  cisp2.ml  cisp3.ml  cisp4.ml
examples/cisp_backup/syncopation/: cisp4.ml  cisp6.ml  cisp8.ml
examples/cisp_backup/tarkovski/: cisp1.ml  cisp3.ml
examples/cisp_backup/terreytunes/: cisp3.ml  cisp4.ml
examples/cisp_backup/trainTunnel/: cisp3.ml  cisp5.ml  cisp7.ml  readme.txt
examples/cisp_backup/transgap/: cisp3.ml  cisp5.ml
examples/cisp_backup/triangleclock/: cisp4.ml
examples/cisp_backup/video1/: cisp1.ml  cisp5.ml
examples/cisp_backup/vpnPatch/: cisp1.ml  cisp2.ml
examples/cisp_backup/zimmermanzel/: cisp1.ml
examples/cisp_top/: cisp_top.ml  dune
examples/csound/: DEBUG.scd  DRUM.uscore  DRUMMINGANTS!.uscore  folder_test.scd  global?.uscore  play_samples.csd  thistoo.uscore  wfs_score.scd  wfs_score.uscore
examples/simplecasper/: Untitled3.maxpat  ant_controllers.maxpat  cs.choose.maxpat  env.maxpat  main.maxpat  main6.maxpat  main7.maxpat  mupper.maxpat  voice_1.maxpat  voice_6.maxpat
jack/: .merlin  caml_jack.c  jack.ml  jack.mli
lib/ants/: ants.ml  dune
lib/chords/: chords.ml  chords.mli  dune  test_foo.ml
lib/cisp/: cisp.ml  dune  readme.md
lib/clockscheduler/: clockscheduler.ml  clockscheduler.mli  dune
lib/csound/: csound.ml  dune
lib/dream_websocket/: dream_websocket.ml  dune
lib/euclid/: euclid.ml
lib/fqueue/: dune
lib/fraction/: dune  fraction.ml
lib/graph/: dune  graph.ml
lib/graphsvg/: dune  graphsvg.ml  graphsvg.mli
lib/history/: dune  history.ml
lib/infseq/: dune  infseq.ml
lib/jack/: #dune#  caml_jack.c  dune
lib/jackMidi/: #dune#  caml_jack_midi.c  dune  midiInTest.maxpatch.maxpat
lib/mem_sq/: mem_sq.ml
lib/midi/: midi.ml  readme.md
lib/midiParser/: dune  node.ml
lib/myplugin/: copy_binary.sh  current.txt  dune  genplug  how_to_compile.txt  myplugin.ml  random_7Pyv0ZX08P.ml
lib/oscParser/: oscParser.mli
lib/oscStream/: oscStream.ml  oscStream.mli
lib/params/: README.md  dune  params.ml  params.mli
lib/parser/: dune  parser.ml  parser.mli
lib/plugface/: dune  plugface.ml  plugface.mli
lib/process/: dune  process.ml
maxmsp/: Input_Notes.maxpat  Untitled1.maxpat  max_blackhole_router.maxpat  one_table.maxpat  osc-testpatch.maxpat  ping.maxpat  sample_aptc.maxpat
process/: .merlin  dune  process.ml  process.mli
sndfile/: dune  sndfile.ml  sndfile.mli  sndfile_stubs.c
supercollider/: fragment_player.scd  fragment_player2.scd  simple_sine.scd
(+164 files in other folders)
