(executable
 (name collatz)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules collatz)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name scheduler)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules scheduler)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name decoherence)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules decoherence)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name multisine)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules multisine)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name simplesine)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules simplesine)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name fmfb)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules fmfb)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name kuramoto)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules kuramoto)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name inputexample)
 (link_flags (-cclib -ljack -cclib  -lsndfile))
 (ocamlopt_flags -O3)
 (modules inputexample)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name filtertest)
 (link_flags (-cclib -ljack -cclib -lsndfile))
 (ocamlopt_flags -O3)
 (modules filtertest)
 (libraries bigarray ctypes jack sndfile))


(executable
 (name sndfiletest)
 (link_flags (-cclib -ljack -cclib -lsndfile))
 (ocamlopt_flags -O3)
 (modules sndfiletest)
 (libraries bigarray ctypes jack sndfile))


(executable
 (name nonrt)
 (link_flags (-cclib -ljack -cclib -lsndfile))
 (ocamlopt_flags -O3)
 (modules nonrt)
 (libraries bigarray ctypes jack sndfile))



(executable
 (name fluct)
 (link_flags (-cclib -ljack -cclib -lsndfile))
 (ocamlopt_flags -O3)
 (modules fluct)
 (libraries bigarray ctypes jack sndfile yojson))


(executable
  (name cispTest)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cispTest)
  (libraries midi cisp bigarray ctypes jack jackMidi sndfile fqueue))

(executable
  (name cisp1)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp1)
  (libraries infseq lwt.unix oscStream midi cisp bigarray ctypes jack jackMidi euclid))

(executable
  (name cisp2)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp2)
  (preprocess (pps lwt_ppx))
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))

(executable
  (name cisp3)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp3)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid)
)

(executable
  (name cisp4)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp4)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))


(executable
  (name cisp5)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp5)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))

(executable
  (name cisp6)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp6)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))

(executable
  (name cisp7)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp7)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))

(executable
  (name cisp8)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cisp8)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))

(executable
  (name cispOsc)
  (link_flags (-cclib -ljack -cclib -lsndfile))
  (ocamlopt_flags -O3)
  (modules cispOsc)
  (libraries infseq midi cisp bigarray ctypes jack jackMidi sndfile fqueue euclid))
  