(executable
 (name collatz)
 (ocamlopt_flags -O3)
 (modules collatz)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name scheduler)
 (ocamlopt_flags -O3)
 (modules scheduler)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name decoherence)
 (ocamlopt_flags -O3)
 (modules decoherence)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name null)
 (modules null)
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name nullsine)
 (modules nullsine)
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name nullmic)
 (modules nullmic)
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name ssp)
 (modules ssp)
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name ssp2)
 (modules ssp2)
 (ocamlopt_flags -O3)
 (libraries cisp jack))

(executable
 (name ssp3)
 (modules ssp3)
 (ocamlopt_flags -O3)
 (libraries cisp jack))

(executable
 (name tablepath)
 (modules tablepath)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack))

(executable
 (name tablepath2)
 (modules tablepath2)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack))

(executable
 (name tablepath2b)
 (modules tablepath2b)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepath2nrt)
 (modules tablepath2nrt)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepathslow)
 (modules tablepathslow)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepathslow2)
 (modules tablepathslow2)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepathsplit)
 (modules tablepathsplit)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepathsplit2)
 (modules tablepathsplit2)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepathsplitnew)
 (modules tablepathsplitnew)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name tablepathnew)
 (modules tablepathnew)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries toolkit cisp jack sndfile))

(executable
 (name null_lookup)
 (modules null_lookup)
  (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name null_lookup2)
 (modules null_lookup2)
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name null_loops)
 (modules null_loops)
 (ocamlopt_flags -O3)
 (libraries cisp bigarray ctypes jack sndfile))

(executable
 (name multisine)
 (ocamlopt_flags -O3)
 (modules multisine)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name simplesine)
 (ocamlopt_flags -O3)
 (modules simplesine)
 (libraries bigarray ctypes jack))

(executable
 (name simplesineosc)
 (ocamlopt_flags -O3)
 (modules simplesineosc)
 (libraries cisp lo bigarray ctypes jack))

(executable
 (name antcolony)
 (flags
  (:standard -w -26-32-69-34))
 (ocamlopt_flags -O3)
 (modules antcolony)
 (libraries lwt lwt.unix graphsvg lo cisp jack svg_gen dream spacegen sndfile ants)
 (preprocess
  (pps lwt_ppx)))


(executable
 (name antcolony3d)
 (flags
  (:standard -w -26-27-32-34-37-69))
 (ocamlopt_flags -O3)
 (modules antcolony3d)
 (libraries wfs csound lwt lwt.unix graphsvg lo cisp jack jackMidi svg_gen dream spacegen sndfile midi history ants clockscheduler supercollider)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name traffic)
 (flags
  (:standard -w -26-27-32-34-37-69))
 (ocamlopt_flags -O3)
 (modules traffic)
 (libraries cisp jack unix sndfile yojson osc_unix)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name traffic_params_gen)
 (modules traffic_params_gen)
 (libraries params yojson lwt lwt.unix cohttp-lwt-unix)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name fmfb)
 (ocamlopt_flags -O3)
 (modules fmfb)
 (libraries bigarray ctypes jack))

(executable
 (name kuramoto)
 (ocamlopt_flags -O3)
 (modules kuramoto)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name inputexample)
 (ocamlopt_flags -O3)
 (modules inputexample)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name filtertest)
 (ocamlopt_flags -O3)
 (modules filtertest)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name sndfiletest)
 (ocamlopt_flags -O3)
 (modules sndfiletest)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name nonrt)
 (ocamlopt_flags -O3)
 (modules nonrt)
 (libraries bigarray ctypes jack sndfile))

(executable
 (name fluct)
 (ocamlopt_flags -O3)
 (modules fluct)
 (libraries bigarray ctypes jack sndfile yojson))

(executable
 (name cispTest)
 (ocamlopt_flags -O3)
 (modules cispTest)
 (libraries midi cisp bigarray ctypes jack jackMidi sndfile fqueue))

(executable
 (name cisp1)
 (flags
  (:standard -w -26-27-32))
 (modules cisp1)
 (libraries
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  euclid
  dynlink
  plugface))

(executable
 (name simplesinecisp)
 (flags
  (:standard -w -26-27-32))
 (modules simplesinecisp)
 (libraries
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  euclid
  ))

(executable
 (name graphpath)
 (ocamlopt_flags -O3)
 (modules graphpath)
 (libraries
  infseq
  lwt.unix
  oscStream
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  euclid))

(executable
 (name midiStartFile)
 (ocamlopt_flags -O3)
 (modules midiStartFile)
 (libraries infseq lwt.unix midi cisp bigarray ctypes jack jackMidi))

(executable
 (name simpleMidi)
 (ocamlopt_flags -O3)
 (modules simpleMidi)
 (libraries infseq lwt.unix midi cisp bigarray ctypes jack jackMidi))

(executable
 (name midiStartFile2)
 (ocamlopt_flags -O3)
 (modules midiStartFile2)
 (libraries infseq lwt.unix midi cisp bigarray ctypes jack jackMidi))

(executable
 (name cisp2)
 (ocamlopt_flags -O3)
 (modules cisp2)
 (preprocess
  (pps lwt_ppx))
 (libraries infseq midi cisp bigarray ctypes jack jackMidi fqueue euclid))

(executable
 (name cisp3)
 (ocamlopt_flags -O3)
 (modules cisp3)
 (libraries
  osc_unix
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid))

(executable
 (name cisp4)
 (ocamlopt_flags -O3)
 (modules cisp4)
 (libraries
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid))

(executable
 (name cisp5)
 (ocamlopt_flags -O3)
 (modules cisp5)
 (libraries
  lo
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid))

(executable
 (name cisp6)
 (ocamlopt_flags -O3)
 (modules cisp6)
 (libraries
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid))

(executable
 (name cisp7)
 (ocamlopt_flags -O3)
 (modules cisp7)
 (libraries
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid))

(executable
 (name cisp8)
 (ocamlopt_flags -O3)
 (modules cisp8)
 (libraries
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid))

(executable
 (name cispOsc)
 (ocamlopt_flags -O3)
 (modules cispOsc)
 (libraries
  threads
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  fqueue
  euclid
  osc_unix))

(executable
 (name cispOsc2)
 (ocamlopt_flags -O3)
 (modules cispOsc2)
 (libraries
  threads
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  fqueue
  euclid
  osc_unix))

(executable
 (name cispOsc3)
 (flags
  (:standard -w -32-34-39-69))
 (ocamlopt_flags -O3)
 (modules cispOsc3)
 (libraries quip threads infseq midi cisp jack osc_unix parser ws))

(executable
 (name sendOsc)
 (ocamlopt_flags -O3)
 (modules sendOsc)
 (libraries
  lo
  threads
  infseq
  midi
  cisp
  bigarray
  ctypes
  jack
  jackMidi
  sndfile
  fqueue
  euclid
  osc_unix))

(executable
 (name receiveOsc)
 (ocamlopt_flags -O3)
 (modules receiveOsc)
 (libraries threads lo midi cisp jackMidi))

(executable
 (name receiveOscTest)
 (ocamlopt_flags -O3)
 (modules receiveOscTest)
 (libraries threads lo midi cisp jackMidi))

(executable
 (name ivo)
 (ocamlopt_flags -O3)
 (modules ivo)
 (libraries lo oscParser midi cisp jackMidi))

(executable
 (name supercollider_test)
 (flags
  (:standard -w -26-27-32-34-37-69))
 (ocamlopt_flags -O3)
 (modules supercollider_test)
 (libraries supercollider clockscheduler jack cisp unix)
)

;(executable
; (name osc_to_audio_example_using_threads)
;(link_flags (-cclib -ljack -cclib -lsndfile))
;(ocamlopt_flags -O3)
;(modules osc_to_audio_example_using_threads)
;(libraries threads lo infseq midi cisp bigarray ctypes jack jackMidi))


